--- a/templates/subpage.html
+++ b/templates/subpage.html
@@ -86,6 +86,17 @@
                             </p>
                         </div>
 
+                                                <div class="services-item" style="cursor: pointer;" onclick="window.location.href='/sngo';">
+                            <div class="item-icon">
+                                <img src="{{ url_for('static', filename='other/question-lg.svg')}}" alt="service icon"
+                                    style="width: 110px; height: 110px;">
+                            </div>
+                            <h5 class="item-title fw-7">Ask your Queries</h5>
+                            <p class="text">Get answers to the questions you have about your child's health and figure
+                                out the solutions to the problems of modern day parenting with the help of a chat-bot
+                            </p>
+                        </div>
+
 
                     </div>
 
